--- a/filter-control-preclass.html
+++ b/filter-control-preclass.html
@@ -185,12 +185,16 @@ $(document).ready(function () {
 <pre class="r"><code>x=0
 for(i in 0:1000){
   x=x+i
-}</code></pre>
+}
+x</code></pre>
+<pre><code>## [1] 500500</code></pre>
 <p>B. Now, add all the EVEN integers between 0 and 1000 (hint: use seq())</p>
 <pre class="r"><code>y=0
 for(i in seq(0,1000,by=2)){
   y=y+i
-}</code></pre>
+}
+y</code></pre>
+<pre><code>## [1] 250500</code></pre>
 <p>C. Now, repeat A and B WITHOUT using a loop.</p>
 <pre class="r"><code>#A
 sum(0:1000)</code></pre>
@@ -219,7 +223,15 @@ for(i in 1:6){
       survey.clean[i,j]=NA
     }
   }
-}</code></pre>
+}
+survey.clean</code></pre>
+<pre><code>##   participant q1 q2 q3 q4 q5
+## 1           1  5  4 NA NA NA
+## 2           2  3  2 NA  5  4
+## 3           3  2  2  4  2 NA
+## 4           4 NA  5  2 NA  2
+## 5           5 NA NA NA  4  4
+## 6           6 NA NA NA  2  2</code></pre>
 <p>B. Now, again using a loop, add a new column to the dataframe called “invalid.answers” that indicates, for each participant, how many bad answers they gave.</p>
 <pre class="r"><code>survey$invalid.answers=0
 for(i in 1:6){
@@ -228,7 +240,15 @@ for(i in 1:6){
       survey$invalid.answers[i]=survey$invalid.answers[i]+1
     }
   }
-}</code></pre>
+}
+survey</code></pre>
+<pre><code>##   participant q1  q2 q3  q4  q5 invalid.answers
+## 1           1  5   4 -4 -30  88               3
+## 2           2  3   2 -3   5   4               1
+## 3           3  2   2  4   2 -20               1
+## 4           4  7   5  2  23   2               2
+## 5           5 11 -10  9   4   4               3
+## 6           6  0  99 10   2   2               3</code></pre>
 </div>
 
 
